# codesearch-plugin

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
codesearch/: __init__.py
codesearch/builder/: __init__.py  chunker.py  clangd_parser.py  embeddings.py  indexer.py  lsp_client.py  parser.py  storage.py
codesearch/hooks/: __init__.py  triggers.py
codesearch/mcp/: __init__.py  server.py  tools.py
codesearch/subagent/: __init__.py  config.py
docs/: clangd-usage.md
docs/superpowers/plans/: 2026-04-15-clangd-lsp-parser.md  2026-04-16-graph-indexing.md
examples/: basic_usage.py  test_components.py
examples/sample_c_code/: demo.c
tests/: __init__.py  test_builder.py  test_clangd_parser.py  test_hooks.py  test_lsp_client.py  test_mcp.py
