[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codesearch-plugin"
version = "0.1.0"
description = "Semantic code search toolkit for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "codesearch-plugin" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "chromadb>=0.4.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Clangd support (optional, system installation required)
# This is a meta-package for documentation purposes
clangd = []

full = [
    "codesearch-plugin[dev,clangd]",
]

[project.scripts]
codesearch-mcp = "codesearch.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["codesearch"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=codesearch --cov-report=term-missing"
